--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,66 @@
+annotated-types==0.7.0
+anyio==4.11.0
+cachetools==6.2.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.3.0
+colorama==0.4.6
+cryptography==46.0.2
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-python-multipart==0.0.6
-pdfplumber==0.10.3
-google-generativeai==0.3.2
+google-ai-generativelanguage==0.6.15
+google-api-core==2.26.0
+google-api-python-client==2.184.0
+google-auth==2.41.1
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+greenlet==3.2.4
+grpcio==1.75.1
+grpcio-status==1.62.3
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.31.0
+httptools==0.7.1
+httpx==0.28.1
+idna==3.10
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-core==0.3.79
+langchain-text-splitters==0.3.11
+langsmith==0.4.35
+orjson==3.11.3
+packaging==24.2
+pdfminer.six==20231228
+pdfplumber==0.11.0
+pillow==11.3.0
+proto-plus==1.26.1
+protobuf==4.25.8
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.12.2
+pydantic-settings==2.1.0
+pydantic_core==2.41.4
+pyparsing==3.2.5
+pypdfium2==4.30.0
 python-dotenv==1.0.0
-Pillow==10.2.0
+python-multipart==0.0.6
+PyYAML==6.0.3
+requests==2.32.5
+requests-toolbelt==1.0.0
+rsa==4.9.1
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+starlette==0.35.1
+tenacity==8.5.0
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.27.0
+watchfiles==1.1.0
+websockets==15.0.1
+zstandard==0.25.0
