--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -45,6 +45,7 @@ pydantic-settings==2.1.0
 pydantic_core==2.41.4
 pyparsing==3.2.5
 pypdfium2==4.30.0
+python-docx==1.2.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.3
@@ -64,3 +65,4 @@ uvicorn==0.27.0
 watchfiles==1.1.0
 websockets==15.0.1
 zstandard==0.25.0
+
